--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,8 @@
             "program": "${workspaceFolder}/TestMain/bin/Debug/net7.0/Test.exe",
             "args": [ ],
             "cwd": "${workspaceFolder}",
-            "console": "externalTerminal",
+            // "console": "externalTerminal",
+            "console": "internalConsole",
             "stopAtEntry": false
         }
     ]
